added more code

--- a/page.html
+++ b/page.html
@@ -9,11 +9,26 @@
   <body>
     <form class="" action="/" method="post">
       <label for="city">City name:</label>
-      <input id="city" type="text" name="cityName" />
+      <input
+        id="city"
+        type="text"
+        name="cityName"
+        placeholder="Enter city name"
+      />
       <label for="stateCode">State Code:</label>
-      <input id="stateCode" type="text" name="stateCode" />
+      <input
+        id="stateCode"
+        type="text"
+        name="stateCode"
+        placeholder="Enter state code"
+      />
       <label for="countryCode">Country Code:</label>
-      <input id="countryCode" type="text" name="countryCode" />
+      <input
+        id="countryCode"
+        type="text"
+        name="countryCode"
+        placeholder="Enter country code"
+      />
       <button type="submit" name="button">Click Here</button>
     </form>
   </body>
